Fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -577,7 +577,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  line-height: 2;
+  line-height: 3.5;
 }
 
 .project-title h2 {
@@ -626,7 +626,7 @@ a {
 
 .image {
   width: 500px;
-  height: 500px;
+  height: auto;
 }
 }
 
